src/patch/snapshots/flickzeug__patch__parse__tests__real_world_patches@0004-win-remove-ucrt-Coff.zig.patch.snap
---
source: src/patch/parse.rs
expression: patches
input_file: src/patch/test-data/0004-win-remove-ucrt-Coff.zig.patch
---
Ok(
    [
        Patch {
            original: Some(
                Filename(
                    "a/src/link/Coff.zig.old",
                ),
            ),
            modified: Some(
                Filename(
                    "b/src/link/Coff.zig",
                ),
            ),
            hunks: [
                Hunk {
                    old_range: HunkRange {
                        start: 2130,
                        len: 1,
                    },
                    new_range: HunkRange {
                        start: 2130,
                        len: 1,
                    },
                    function_context: None,
                    lines: [
                        Delete(
                            "                        try argv.append(try allocPrint(arena, \"{s}ucrt{s}.lib\", .{ lib_str, d_str }));\n",
                        ),
                        Insert(
                            "                        // try argv.append(try allocPrint(arena, \"{s}ucrt{s}.lib\", .{ lib_str, d_str }));\n",
                        ),
                    ],
                },
            ],
        },
    ],
)
